# OOP682

./: README.md  in.py  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
D/: bad_idea.py  good_idea.py
I/: bad_idea.py  good_idea.py
L/: bad_idea.py  goog_idea.py
O/: bad_idea.py  good_idea.py
app/: database.py  models.py  models_orm.py  services.py
challenge/: csv_log_source.py  file_log_source.py  ilog_source.py  log_source_factory.py  main_window.py  sample.csv
fastapi-lab/: pyproject.toml  sql_app.db
fastapi-lab/app/: repositories.py  services.py
models/: person.py  staff.py  student.py  tempCodeRunnerFile.py
tests/: test_service.py
